fixed h1 huge gap in posts and documents

--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -115,9 +115,7 @@ hr{
   color: $brand-primary;
   margin-right: 30px;
 }
-h1{
-  margin-bottom: 100px;
-}
+
 
 .white{
   color:#fff !important;
